@@ -1,6 +1,10 @@
 fidoconfig 0.9
 --------------
 
+Fri Sep 10  11:05:00
+sms:
++ added keyword sessionPwd
+
 Thu Sep 02  16:25:00
 Fedor:
 * fixed type in fileLDescString
